# intrinsic

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  flake.nix  justfile  to-do.md
src/: main.cpp  paths.hpp  settings.hpp  state.hpp
src/db/: database.cpp  database.hpp  database_queries.cpp  database_schema.cpp  sql_helpers.hpp
src/views/: view.hpp  view_add.hpp  view_error.hpp  view_help.hpp  view_home.hpp  view_settings.hpp  view_ticker.hpp  view_ticker_helpers.hpp
src/views/add/: view_add.hpp  view_add_form.hpp  view_add_ui.hpp
src/views/error/: view_error.hpp
src/views/help/: view_help.hpp
src/views/home/: view_home.hpp
src/views/settings/: view_settings.hpp
src/views/ticker/: view_ticker.hpp  view_ticker_helpers.hpp  view_ticker_metrics.hpp  view_ticker_render.hpp
tests/: database_test.cpp  key_handlers_test.cpp  reset_nuke_test.cpp  settings_test.cpp  state_and_settings_helpers_test.cpp  test_fixture.hpp  test_harness.hpp  test_main.cpp  test_utils.hpp  view_helpers_test.cpp
